fix: add flex-wrap: wrap  into containercard

--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ main {
 
 .containcard {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
